@@ -61,6 +61,8 @@ version 0.60:
 	* aim:// URI's supported with gaim-remote command
 	* Don't auto-login if an existing Gaim session is already
 	  running.
+	* Login all auto-login accounts from login window (Thanks
+	  Etan Reisner)
 
 version 0.59 (06/24/2002):
 	* Hungarian translation added (Thanks, Sutto Zoltan)
